# WinCraft

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  _c_my_window_8cpp.html  _c_my_window_8cpp.js  _c_my_window_8cpp__incl.map  _c_my_window_8cpp__incl.md5  _c_my_window_8h.html  _c_my_window_8h.js  _c_my_window_8h__dep__incl.map  _c_my_window_8h__dep__incl.md5  _c_my_window_8h__incl.map  _c_my_window_8h__incl.md5  _c_my_window_8h_source.html  _exception_8h.html  _exception_8h.js  _exception_8h__dep__incl.map  _exception_8h__dep__incl.md5  _exception_8h__incl.map  _exception_8h__incl.md5  _exception_8h_source.html  _main_8cpp.html  _main_8cpp.js  _main_8cpp__incl.map  _main_8cpp__incl.md5  _main_8cpp_a6a0b90e2ff0aef80af0cadf613018f70_cgraph.map  _main_8cpp_a6a0b90e2ff0aef80af0cadf613018f70_cgraph.md5  _main_8cpp_a6a0b90e2ff0aef80af0cadf613018f70_icgraph.map  _main_8cpp_a6a0b90e2ff0aef80af0cadf613018f70_icgraph.md5  _main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  _main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  _notification_icon_manager_8cpp.html  _notification_icon_manager_8cpp__incl.map  _notification_icon_manager_8cpp__incl.md5  _notification_icon_manager_8h.html  _notification_icon_manager_8h__dep__incl.map  _notification_icon_manager_8h__dep__incl.md5  _notification_icon_manager_8h__incl.map  (+261 more)
.github/workflows/: auto-clang-format.yml  codeql.yml  continuous-integration.yml  documentation.yml
cfg/: Settings.ini
cmake/: CodeCoverage.cmake  Options.cmake  StaticAnalyzers.cmake
include/: CMyWindow.h  Exception.h  NotificationIconManager.h  resource.h
include/Utility/: StringConversion.h
res/: resource.rc
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  (+27 more)
src/: CMyWindow.cpp  Main.cpp  NotificationIconManager.cpp
src/Utility/: StringConversion.cpp
test/: CMakeLists.txt  CMyWindow.cpp  NotificationIconManager.cpp
test/Utility/: StringConversion.cpp
tools/: convert-html.bat
tools/__Setup/: packages.config  requirements.txt
